# netbox-gitlab

./: README.md  setup.cfg
examples/: device_template.j2  interface_template.j2  inventory_template.j2
netbox_gitlab/: __init__.py  fields.py  forms.py  hacks.py  models.py  navigation.py  signals.py  template_content.py  urls.py  utils.py  views.py
netbox_gitlab/migrations/: 0001_initial.py  0002_traceelement.py
netbox_gitlab/static/netbox_gitlab/: style.css
netbox_gitlab/templates/netbox_gitlab/: ask_branch.html  diff_highlight_line.html  error.html  export_device.html  export_interfaces.html  export_inventory.html  gitlab_error.html
netbox_gitlab/templates/netbox_gitlab/device/: device_info.html  update_interface_table.html
