[metadata]
name = netbox_gitlab
version = attr: netbox_gitlab.VERSION
description = GitLab export to Ansible Inventory for NetBox
long_description = file: README.md
long_description_content_type = text/markdown
author = Sander Steffann
author_email = sander@isp.solcon.nl
url = https://github.com/solcon/netbox_gitlab
license = Apache 2.0
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.0
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    setuptools
    python-gitlab==1.15.0

[options.package_data]
netbox_gitlab =
    static/netbox_gitlab/*.css
    templates/*.html
    templates/*/*.html
    templates/*/*/*.html
    templates/*/*/*/*.html
